remove error in shoter

--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
     
 </head>
 <body>
-    <div>
-   <h1 class="results">0</h1>
+    <div> 
+        <h1 class="results">0</h1>
     </div>
 
     <div class="grid"></div>
     <script src="app.js"></script>
+    <div>
+        <h1>To Start</h1>
+        <p>Please press 'left' <kbd>&lt; </kbd> key to move left</p>
+        <p>Please press 'right <kbd>&gt; </kbd> key to move right</p>
+        <p>Please press 'up' <kbd>^</kbd> key to shoot</p>
+    </div>
 </body>
 </html>
