change the favicon link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Invaders</title>
-<link rel="icon" href="../space-invader/imgages/battleship.png" type="image/x-icon">
+<link rel="icon" href="./imgages/battleship.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <script src="app.js" async></script>
 </head>
